[workspace]
resolver = "2"
members = [
  'utils',
  'day_01',
  'day_02',
  'day_03',
  'day_04',
  'day_05',
  'day_06',
  'day_07',
]

[workspace.dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
tracing = { version = "0.1.40", features = [ "log", "attributes" ], default-features = false }
itertools = "0.12.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [ "env-filter", "local-time", "fmt", "ansi" ] }
regex = "1.10.2"
once_cell = "1.19.0"
ansi_term = "0.12.1"
im = "15.1.0"