[package]
name = "day_04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
once_cell = { workspace = true }
regex = { workspace = true }
itertools = { workspace = true }
tracing = {workspace = true}
im = { workspace = true }
