[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ansi_term = { workspace = true }
tracing-timing = "0.6.0"
thiserror = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }